Fixed table elements to be readable on sm

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,3 +1,7 @@
+* {
+  font-family: Arial, Helvetica, sans-serif;  
+}
+
 .site {
     min-height: 100dvh;
     display: grid;
@@ -33,3 +37,23 @@ tr.hide-table-padding td {
 {
   content: '+' !important;
 }
+
+/* td:nth-of-type(3n) {    
+    border-right: 3px solid gray;
+} */
+
+thead > tr {    
+    border-bottom: 2px solid gray;
+}
+
+.cstmTable tr:nth-of-type(3n) td {    
+    border-bottom: 2px solid gray;
+}
+
+.cstmTableLite tr:nth-of-type(even) td {    
+    border-bottom: 2px solid gray;
+}
+
+/* table {
+    border: 3px solid red;
+} */
